@@ -2,6 +2,7 @@ package com.cg.fitnesstracker.app.service.implementation;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -18,7 +19,7 @@ import com.cg.fitnesstracker.app.repository.FoodItemRepository;
 import com.cg.fitnesstracker.app.repository.MealRepository;
 import com.cg.fitnesstracker.app.service.DietService;
 
-//@Component
+
 public class DietServiceImpl implements DietService{
 	private String foodDietEndo;
 	private String foodDietEcto;
@@ -26,17 +27,17 @@ public class DietServiceImpl implements DietService{
 
 	public void setFoodDietEcto(String foodDietEcto) {
 		this.foodDietEcto = foodDietEcto;
-		System.out.println("setter1..");
+		
 	}
 
 	public void setFoodDietEndo(String foodDietEndo) {
 		this.foodDietEndo = foodDietEndo;
-		System.out.println("setter2..");
+	
 	}
 
 	public void setFoodDietMeso(String foodDietMeso) {
 		this.foodDietMeso = foodDietMeso;
-		System.out.println("setter3..");
+
 	}
 
 	@Autowired
@@ -48,7 +49,7 @@ public class DietServiceImpl implements DietService{
 	@Autowired
 	private MealRepository mealRepository;
 	
-
+	//To get all diets
 	@Override
 	public List<Diet> getAllDietService(String username) {
 		Customer cust = customerRepository.findByUsername(username);
@@ -56,6 +57,7 @@ public class DietServiceImpl implements DietService{
 		return dietList;
 	}
 	
+	//To get diet by Id
 	@Override
 	public Diet getDietByIdService(int dietId) {
 		Optional<Diet> diet = dietRepository.findById(dietId);
@@ -64,7 +66,8 @@ public class DietServiceImpl implements DietService{
 		}
 		return diet.get();
 	}
-
+	
+	//To add diet by user id
 	@Override
 	public Diet addDietByUserIdService(String username, Diet diet) {
 		Customer cust = customerRepository.findByUsername(username);
@@ -86,6 +89,7 @@ public class DietServiceImpl implements DietService{
 		return diet;
 	}
 
+	//To add food item to diet
 	@Override
 	public FoodItem addFoodItemToDietService(int dietId, int foodId) {
 		Diet diet = dietRepository.findById(dietId).get();
@@ -93,14 +97,13 @@ public class DietServiceImpl implements DietService{
 		if (diet!=null && food!=null) {
 			Meal meal = new Meal();
 			meal.setDiet(diet);
-//			meal.setMealId(meal.getMealId()+1);
 			meal.setMealId(meal.getMealId());
 			meal.setFoodId(food.getFoodId());
 			meal.setFoodName(food.getFoodName());
 			meal.setFoodQuant(food.getFoodQuantity());
 			meal.setCaloriesInFood(food.getCaloriesInFood());
 			List<Meal> mealList = diet.getMealList();
-			List<Meal> sameMeal = mealList.stream().filter(m->m.getFoodName().equals(food.getFoodName())).toList();
+			List<Meal> sameMeal = mealList.stream().filter(m->m.getFoodName().equals(food.getFoodName())).collect(Collectors.toList());
 			if (sameMeal.size()>0) {
 				throw new ApplicationException("Food Item already exists",400);
 			}
@@ -111,6 +114,7 @@ public class DietServiceImpl implements DietService{
 		return food;
 	}
 
+	//To remove food Item from diet
 	@Override
 	@Transactional
 	public FoodItem removeFoodItemFromDietService(int dietId, int foodId) {
@@ -121,7 +125,8 @@ public class DietServiceImpl implements DietService{
 		}
 		return food;
 	}
-
+	
+	//To delete diet 
 	@Override
 	@Transactional
 	public Diet deleteDietService(String userName, int dietId) {
@@ -136,7 +141,8 @@ public class DietServiceImpl implements DietService{
 		}
 		return diet.get();
 	}
-
+	
+	//To get total calories in a diet
 	@Override
 	public int getTotalCaloriesService(String userName, int dietId) {
 		Customer cust = customerRepository.findByUsername(userName);
@@ -154,14 +160,14 @@ public class DietServiceImpl implements DietService{
 		}	
 		return cal;
 	}
-
+	
+	//To suggest a diet
 	@Override
 	public String suggestDietService(String username) {
 		
 		Customer cust = customerRepository.findByUsername(username);
 		if(cust!=null) {
 			String bodyType = cust.getBodyType().toString();
-			float weight =cust.getWeight();
 			if(bodyType.equals("ENDOMORPH")) {
 				return foodDietEndo;
 			}
